--- a/lib/cg_annotate.wiki
+++ b/lib/cg_annotate.wiki
@@ -39,10 +39,14 @@ e (default) - give an error
 y - replace them with new annotation if dbfile is newer,
 n - keep the old annotation,
 a - allways replace them with new information
-; -distrreg: distribute regions for parallel processing.
-Possible options are 0 (no distribution), chr (or 1) (distribution per
-chromosome), a number (distribution ino regions of this size) ,file name
-(the regions in the file will be used for subjobs)
+; -distrreg: distribute regions for parallel processing. Possible options are:
+** 0: no distribution (also empty)
+** 1: default distribution
+** schr or schromosome: each chromosome processed separately
+** chr or chromosome: each chromosome processed separately, except the unsorted, etc. with a _ in the name that will be combined),
+** a number: distribution into regions of this size
+** a number preceded by an s: distribution into contiguous sequenced regions, where regions are combined as long as they are smaller than the given size
+** a file name: the regions in the file will be used for distribution
 
 == database types ==
 ; **reg**: regions file that must at least contain the columns chromosome,start,end. 
