--- a/lib/cg_sv.wiki
+++ b/lib/cg_sv.wiki
@@ -34,12 +34,14 @@ Possible values are: manta, lumpy sniffles, npinv, cg, gridds
 ; -regmincoverage mincoverage: If no regionfile is given, variants will be called only in regions with
 a coverage of at least **mincoverage** (default 3)
 ; -distrreg: distribute regions for parallel processing (default s50000000).
-Possible options are 0 (no distribution) or 1 (default distribution),
-schr or schromosome (each chromosome processed separately),
-chr or chromosome (each chromosome processed separately, except the unsorted, etc. with a _ in the name that will be combined),
-a number (distribution into regions of this size) ,
-a number preceded by an s (distribution into contiguous sequenced regions, where regions are combined as long as they are smaller than the given size) ,
-or a file name (the regions in the file will be used for distribution)
+Possible options are 
+** 0: no distribution (also empty)
+** 1: default distribution (s50000000)
+** schr or schromosome: each chromosome processed separately
+** chr or chromosome: each chromosome processed separately, except the unsorted, etc. with a _ in the name that will be combined),
+** a number: distribution into regions of this size
+** a number preceded by an s: distribution into contiguous sequenced regions, where regions are combined as long as they are smaller than the given size
+** a filename: the regions in the file will be used for distribution
 ; -split 1/0: indicate if in the datafiles, multiple alternative genotypes are split over different lines (default 1)
 ; -t number (-threads): number of threads used by each job (if the method supports threads)
 ; -cleanup 0/1: Use 0 to no cleanup some of the temporary files (vcf, delvar, ...)
