--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -58,7 +58,7 @@ use 1 for (default) realignment with gatk, or srma for alignment with srma
 ; -removeduplicates 0/1/picard/biobambam: By default duplicates will be
 removed (marked actually) using samtools except for amplicon sequencing.
 With this option you can specifically request or turn of duplicate removal
-(overruling the default). If you want to use large amounts of memory, you
+(overruling the default). If you want to use large amounts of memory ;-), you
 can still use picard for removing duplicates (third option)
 ; -amplicons ampliconfile: This option turns on amplicon sequencing
 analysis (see further) using the amplicons defained in **ampliconfile**
