--- a/lib/cg_gtf2tsv.wiki
+++ b/lib/cg_gtf2tsv.wiki
@@ -4,11 +4,16 @@
 cg gtf2tsv ?infile? ?outfile?
 
 == Summary ==
-Converts data in gtf format to gene sft (simple feature table) format
+Converts data in gtf format to gene tsv (tab separated) format
 
 == Arguments ==
 ; **infile**: file to be converted, if not given, uses stdin. File may be compressed.
 ; **outfile**: write results to outfile, if not given, uses stdout
+
+== Options ==
+; -separate 0/1: Bu default (0), a gtf file is converted to a gene tsv file where each line contains a transcript
+and exons are indicated by exonStarts and	exonEnds columns containing (comma spearated) lists of exons start and end positions
+If separate = 1, each line in the original gtf file will stay on a separate line in the output
 
 == Category ==
 Format Conversion
