--- a/docs/format_tsv.wiki
+++ b/docs/format_tsv.wiki
@@ -123,7 +123,8 @@ used if one the those is the given variant alt allele.
 ; o: other; This is only used in split mode when the sample contains non-reference alleles 
 other than the variant alt allele.
 ; r: reference
-; u: unspecified/unsequenced
+; v: variant, but genotype was not specified
+; u: unsequenced
 It is possible to have an assigned zyg other than u (e.g. t) even when the sequenced field is u,
 meaning that the variant caller could make a zygosity estimate/prediction, but the variant 
 call is not of enough quality to consider it sequenced.
@@ -215,7 +216,7 @@ describing the fields present in the tsv file, e.g.:
 #fields	alleleSeq1	1	String	allele present on first chromosome/haplotype
 #fields	alleleSeq2	1	String	allele present on second chromosome/haplotype
 #fields	sequenced	1	String	sequenced status: v = variant, r = reference (i.e. not this variant), u = unsequenced
-#fields	zyg	1	String	Zygosity status: m = homozygous, t = heterozygous, r = reference, o = other variant, c = compound, i.e. genotype has this variant and other variant
+#fields	zyg	1	String	Zygosity status: m = homozygous, t = heterozygous, r = reference, o = other variant, v = variant but genotype unspecified, c = compound (i.e. genotype has this variant and other variant), u = unsequenced	geno
 #fields	phased	1	Integer	Phased status: 0 if not phased, other integer if phased
 #fields	genotypes	H	Integer	Genotypes
 #fields	alleledepth_ref	1	Integer	Allelic depths for the ref allele
