added proc workdir, use file.temp as workdir (that is auto removed if successful run) in most places that used .index before

--- a/lib/cg_pmulticompar.wiki
+++ b/lib/cg_pmulticompar.wiki
@@ -96,7 +96,7 @@ below this number. With this option, the maximum number of open files can
 be set manually (if the program e.g. does not deduce the proper limit, or
 you want to affect the distribution).
 ; -limitreg regionfile: limit the processing to only variants overlapping the regions given in **regionfile**
-; -force 0/1: pmulticompar creates a lot of temporary files (in the .index
+; -force 0/1: pmulticompar creates a lot of temporary files (in the .temp
 dir). Even if some of these exist their recreation is forced by default
 (for safety). If a pmulticompar was interupted, you can use -force 0 to
 reuse the temp files already used instead of recreating them.
