--- a/lib/cg_var.wiki
+++ b/lib/cg_var.wiki
@@ -1,7 +1,7 @@
 = Var =
 
 == Format ==
-cg var ?options? bamfile refseq
+cg var ?options? bamfile refseq ?resultfile?
 
 == Summary ==
 generic command to call variants based on the alignment in bamfile.
@@ -9,14 +9,16 @@ generic command to call variants based on the alignment in bamfile.
 == Description ==
 The command can be used to call variants using different methods. The
 methods are implemented in separate commands such as cg var_gatk; The
-method indicated using the -method option will be actually used. option.
-The result will consist of several files with names derived from the bam
+method indicated using the -method option will be actually used.
+By default, the result will consist of several files with names derived from the bam
 file name: If the bamfile has a name of the form
 map-alignmethod-sample.bam, the result files will consist of file with
 names like these (depending on the varcaller used):
 varall-varcaller-alignmethod-sample.tsv.zst
 var-varcaller-alignmethod-sample.tsv.zst
 sreg-varcaller-alignmethod-sample.tsv.zst
+The optional argument resultfile can be given to use a a result filename. 
+The names of other results files are based on this given filename.
 
 cg var can distribute variant calling by analysing separate
 regions in parallel and combining the results (-distrreg option).
@@ -26,6 +28,7 @@ This command can be distributed on a cluster or using multiple cores with
 == Arguments ==
 ; bamfile: alignment on which to call variants
 ; refseq: genomic reference sequence (must be the one used for the alignment)
+; resultfile: resulting variant file instead of default based on bam file name
 
 == Options ==
 ; -method varcaller: use the given method (**varcaller**) to call
