--- a/lib/cg_process_reports.wiki
+++ b/lib/cg_process_reports.wiki
@@ -44,6 +44,7 @@ or **all** to create all report types.
 == Options ==
 ; -dbdir dbdir: dir containing the reference databases
 ; -r reports (also --reports): list of reports to make
+; -paired 0/1: fastq reports are split in fw and rev if paired is 1 (default), all data is put under fw if 0
 
 This command can be distributed on a cluster or using multiple threads with
 [[joboptions|job options]] (more info with cg help joboptions)
