cg process_reports: added samstats report, also readlength distribution in combine, proc plotly in separate file, process_reportscombine_job split up in several procs

--- a/lib/cg_process_project.wiki
+++ b/lib/cg_process_project.wiki
@@ -91,7 +91,7 @@ Currently supported are" gatk, sam and freebayes
 ; -downsampling_type NONE/ALL_READS/BY_SAMPLE/: sets the downsampling type used by GATK (empty for default).
 ; -reports list: use basic (default) for creating most reports, or all for all reports. If you only
 want some made, give these as a space separated list. Possible reports are (further explained in [[cg_process_reports]]):
-fastqstats fastqc flagstat_reads flagstat_alignments histodepth vars hsmetrics covered histo predictgender
+fastqstats fastqc flagstat_reads flagstat_alignments samstats alignedsamstats unalignedsamstats histodepth vars hsmetrics covered histo predictgender
 ; -dbfile file: Use the given **file** for extra (files in **dbdir** are already used) annotation. 
 This option can be given more than once; all given files will be added
 ; -dbfiles files: Use **files** for extra (files in **dbdir** are already used) annotation. **files** should be a space separated list of files.
